# backupradar-python

./: README.md  pyproject.toml  ruff.toml
.github/workflows/: build.yml  nightly.yml  publish.yml  python-publish.yml  ruff.yml
backupradar/: __init__.py  client.py  exceptions.py  models.py
backupradar-python/: __init__.py  models.py
docs/: open_api_spec.json
